--- a/css/style.css
+++ b/css/style.css
@@ -9621,6 +9621,8 @@ nav a#pull {
     padding: 0;
     border: none;
     background-color: white;
+    position: relative;
+    transition: all .5s ease-in-out;
 }
 
 .persona-icon {
@@ -9647,6 +9649,12 @@ nav a#pull {
     line-height: 1.4;
 }
 
+.red-shadow,
+.blue-shadow {
+    transition: all .5s ease-in-out;
+    bottom: 0;
+}
+
 .red-shadow {
     -webkit-box-shadow: 0px 4px 0px 0px rgb(205 12 13);
     -moz-box-shadow: 0px 4px 0px 0px rgb(205, 12, 13);
@@ -9665,6 +9673,15 @@ nav a#pull {
 
 .bg-blue {
     background: #019cde;
+}
+
+.red-shadow:hover,
+.blue-shadow:hover {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    bottom: .2rem;
+    box-shadow: 0 7px 14px rgb(50 50 93 / 10%), 0 3px 6px rgb(0 0 0 / 8%);
 }
 
 @media (min-width: 480px) and (max-width: 767.95px) {
